# game-42

./: .gitignore  Cargo.toml  README.md
the-game-master/src/: main.rs
the-host/: Cargo.toml
the-host/assets/: config.json
the-host/assets/blender/: auto-export.py  car.blend  car.blend1  race-1.blend  race-1.blend1  race-1.gltf
the-host/assets/gltf/car/: car.glb
the-host/assets/gltf/race-2/: race-2.glb
the-host/assets/shaders/racing/: ground.frag  racetrack.frag  rails.frag  rails.vert
the-host/octtree/: Cargo.toml
the-host/src/: assets.rs  config.rs  controls.rs  debug_input.rs  main.rs
the-host/src/controls/: message.rs  mod.rs
the-host/src/games/: mod.rs  racing.rs
the-host/src/games/racing/: materials.rs  mod.rs  scene.rs  style.rs  track.rs  ui.rs
the-host/src/games/racing/materials/: mod.rs  race_rails.rs  racetrack.rs
the-host/src/games/waiting/: mod.rs
the-net/: Cargo.toml
the-net/src/: lib.rs  protocol.rs  websocket.rs
the-net/src/controls/: message.rs  mod.rs
the-net/static/: index.html
values_macro_derive/src/: lib.rs
