[package]
name = "the_host"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy          = {  version = "0.16", features = ["file_watcher"] }
game_42_net   = { path = "../the-net" }
tokio         = { version = "1.37", features = ["rt-multi-thread"] }
values_macro_derive = { path="../values_macro_derive" }
serde = { version = "1.0", features = ["derive"] }