[package]
name = "the_host"
version = "0.1.0"
edition = "2024"

[dependencies]
game_42_net   = { path = "../the-net" }
tokio         = { version = "1.37", features = ["rt-multi-thread"] }
values_macro_derive = { path="../values_macro_derive" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.0"
rand_chacha = "0.3.1"
qrcodegen = "1.8.0"
bevy_fly_camera = "0.16.0"
avian3d = "0.3"

[dependencies.bevy]
version = "0.16"
features = ["file_watcher", "shader_format_glsl", "bevy_remote"]
