[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
anyhow        = "1"
rand = "0.9.1"
tower-http = { version = "0.6.3", features = ["fs"] }
once_cell = "1.21.3"
