[package]
name = "game_42_net"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = {  version="0.5", features = ["json"] }
rocket_ws = "0.1.1"
values_macro_derive = { path="../values_macro_derive" }
log = "0.4"
